@@ -1,0 +1,33 @@
+package io.airlift.tracing;
+
+import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.Test;
+
+import java.util.Map;
+
+import static io.airlift.configuration.testing.ConfigAssertions.assertFullMapping;
+import static io.airlift.configuration.testing.ConfigAssertions.assertRecordedDefaults;
+import static io.airlift.configuration.testing.ConfigAssertions.recordDefaults;
+
+public class TestOpenTelemetryConfig
+{
+    @Test
+    public void testDefaults()
+    {
+        assertRecordedDefaults(recordDefaults(OpenTelemetryConfig.class)
+                .setEndpoint("http://localhost:4317"));
+    }
+
+    @Test
+    public void testExplicitPropertyMappings()
+    {
+        Map<String, String> properties = ImmutableMap.<String, String>builder()
+                .put("tracing.exporter.endpoint", "http://example.com:1234")
+                .buildOrThrow();
+
+        OpenTelemetryConfig expected = new OpenTelemetryConfig()
+                .setEndpoint("http://example.com:1234");
+
+        assertFullMapping(properties, expected);
+    }
+}
